<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_dayIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_dayIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_high"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_dayIcon" />

    <TextView
        android:id="@+id/tv_low"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/iv_dayIcon"
        app:layout_constraintEnd_toEndOf="@+id/tv_high"
        app:layout_constraintTop_toBottomOf="@+id/tv_high" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/high"
        app:layout_constraintEnd_toStartOf="@+id/tv_high"
        app:layout_constraintTop_toTopOf="@+id/tv_high" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/low"
        app:layout_constraintEnd_toStartOf="@+id/tv_low"
        app:layout_constraintTop_toTopOf="@+id/tv_low" />
</androidx.constraintlayout.widget.ConstraintLayout>